hakkimda.html dosyasını güncelledim.
Hakkımda sayfasını oluşturan hakkimda.html dosyasında bir düzenleme yapıp dosyayı güncelliyorum.

--- a/hakkimda.html
+++ b/hakkimda.html
@@ -17,14 +17,30 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Anasayfa</a></li>
-        <li class="nav-item"><a class="nav-link active" href="hakkimda.html">Hakkımda</a></li>
-        <li class="nav-item"><a class="nav-link" href="ozgecmis.html">Özgeçmiş</a></li>
-        <li class="nav-item"><a class="nav-link" href="sehrim.html">Şehrim</a></li>
-        <li class="nav-item"><a class="nav-link" href="mirasimiz.html">Mirasımız</a></li>
-        <li class="nav-item"><a class="nav-link" href="ilgi-alanlarim.html">İlgi Alanlarım</a></li>
-        <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">Giriş</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Anasayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="hakkimda.html">Hakkımda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ozgecmis.html">Özgeçmiş</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sehrim.html">Şehrim</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ilgi-alanlarim.html">İlgi Alanlarım</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="iletisim.html">İletişim</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Giriş</a>
+        </li>
       </ul>
     </div>
   </div>
