--- a/ilgi-alanlarim.html
+++ b/ilgi-alanlarim.html
@@ -48,7 +48,6 @@
 
 <div class="container my-5">
   <h2 class="text-center mb-4">⚽ 5 Büyük Avrupa Ligi Puan Durumu</h2>
-
   <div id="leagues"></div>
 </div>
 
@@ -59,75 +58,72 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-const apiKey = "214319d70a544ce9bad2ce887eb1dbbd";
-const leagues = {
-  "PL": "Premier League",
-  "PD": "La Liga",
-  "SA": "Serie A",
-  "BL1": "Bundesliga",
-  "FL1": "Ligue 1"
-};
+  const ligler = {
+    "getdata_pl.php": "Premier League",
+    "getdata_pd.php": "La Liga",
+    "getdata_sa.php": "Serie A",
+    "getdata_bl1.php": "Bundesliga",
+    "getdata_fl1.php": "Ligue 1"
+  };
 
-const container = document.getElementById("leagues");
+  const container = document.getElementById("leagues");
 
-for (let code in leagues) {
-  fetch(`https://api.football-data.org/v4/competitions/${code}/standings`, {
-    headers: { "X-Auth-Token": apiKey }
-  })
-  .then(res => res.json())
-  .then(data => {
-    const standings = data.standings[0].table;
+  for (let endpoint in ligler) {
+    fetch(endpoint)
+      .then(res => res.json())
+      .then(data => {
+        const standings = data.standings[0].table;
 
-    const table = `
-      <div class="mb-5">
-        <h4 class="text-center">${leagues[code]}</h4>
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered text-center">
-            <thead>
-              <tr>
-                <th>Sıra</th>
-                <th>Takım</th>
-                <th>O</th>
-                <th>G</th>
-                <th>B</th>
-                <th>M</th>
-                <th>A</th>
-                <th>Y</th>
-                <th>Av.</th>
-                <th>Puan</th>
-              </tr>
-            </thead>
-            <tbody>
-              ${standings.map(team => `
-                <tr>
-                  <td>${team.position}</td>
-                  <td><img src="${team.team.crest}" alt="" width="20"> ${team.team.shortName}</td>
-                  <td>${team.playedGames}</td>
-                  <td>${team.won}</td>
-                  <td>${team.draw}</td>
-                  <td>${team.lost}</td>
-                  <td>${team.goalsFor}</td>
-                  <td>${team.goalsAgainst}</td>
-                  <td>${team.goalDifference}</td>
-                  <td><strong>${team.points}</strong></td>
-                </tr>
-              `).join("")}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    `;
+        const table = `
+          <div class="mb-5">
+            <h4 class="text-center">${ligler[endpoint]}</h4>
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered text-center">
+                <thead>
+                  <tr>
+                    <th>Sıra</th>
+                    <th>Takım</th>
+                    <th>O</th>
+                    <th>G</th>
+                    <th>B</th>
+                    <th>M</th>
+                    <th>A</th>
+                    <th>Y</th>
+                    <th>Av.</th>
+                    <th>Puan</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  ${standings.map(team => `
+                    <tr>
+                      <td>${team.position}</td>
+                      <td><img src="${team.team.crest}" width="20"> ${team.team.shortName}</td>
+                      <td>${team.playedGames}</td>
+                      <td>${team.won}</td>
+                      <td>${team.draw}</td>
+                      <td>${team.lost}</td>
+                      <td>${team.goalsFor}</td>
+                      <td>${team.goalsAgainst}</td>
+                      <td>${team.goalDifference}</td>
+                      <td><strong>${team.points}</strong></td>
+                    </tr>
+                  `).join("")}
+                </tbody>
+              </table>
+            </div>
+          </div>
+        `;
 
-    container.innerHTML += table;
-  })
-  .catch(err => {
-    container.innerHTML += `
-      <div class="alert alert-danger">
-        ${leagues[code]} puan durumu alınamadı. Hata: ${err.message}
-      </div>
-    `;
-  });
-}
+        container.innerHTML += table;
+      })
+      .catch(err => {
+        container.innerHTML += `
+          <div class="alert alert-danger">
+            ${ligler[endpoint]} verisi alınamadı. Hata: ${err.message}
+          </div>
+        `;
+      });
+  }
 </script>
 
 </body>
