Bütün kod dosyalarını ekledim.
Bütün dosyaların en güncel halini, en son halini yükledim

--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="sehrim.html">Şehrim</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="mirasimiz.html">Mirasımız</a>
+            <a class="nav-link" href="takimimiz.html">Takımımız</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="ilgi-alanlarim.html">İlgi Alanlarım</a>
